--- a/src/main/resources/pos_messages.properties
+++ b/src/main/resources/pos_messages.properties
@@ -868,7 +868,7 @@ message.databaseconnectsuccess=<html><h2>You're Connected!</h2><br>Ready to tran
 message.databasecreate=<html><center><h4>Create a default unicentaopos<br>database if it doesn't exist
 message.databasedrivererror=Unable to connect to database: Database driver not found
 message.databasenotsupported=Database "{0}" not supported
-message.databasesuccess=<html><center><h4>Connected!<br><h4>Select a database from the Schema list to change to another database <br />Then click the SET button
+message.databasesuccess=<html><center><h4>Congratulations!<br><h4>You are successfully connected to the database <br />
 message.databasefail=<html><center><h4>uniCenta oPOS requires MySQL 5.7<br />Your Database Server version is not supported but you can continue... <br />
 message.DBDefault=<html><b>By default uniCenta oPOS supports two separate databases!</b> DB 1 is the main default database.<br />DB 2 is the optional second database which could be used for training, testing or connection to another location's database.  Databases must be installed and configured correctly before trying to connect uniCenta oPOS
 message.deletelineno=You are not allowed to do this
