urdu language support implementaion started leddger module added

--- a/src/main/resources/pos_messages.properties
+++ b/src/main/resources/pos_messages.properties
@@ -811,6 +811,8 @@ Menu.UserVoids=Voids by User
 Menu.Utilities=Utilities
 Menu.UtilityOptions=Utilities Options
 Menu.Vouchers=Vouchers
+Menu.AccountingModule=Accounting
+Menu.LedgerManager=Ledger
 message.at=at
 message.ampersand=<html><center>Ampersand(&) character not allowed!<br>Please replace with another character like plus(+)
 message.BadPassword=Invalid Password. Please Retry
