--- a/src/main/resources/data_messages_ur-pk.properties
+++ b/src/main/resources/data_messages_ur-pk.properties
@@ -18,68 +18,69 @@ button.cancel=\u0645\u0646\u0633\u0648\u062e \u06a9\u0631\u06cc\u06ba\u06d4
 button.OK=\u0679\u06be\u06cc\u06a9 \u06c1\u06d2
 button.information=\u0645\u0639\u0644\u0648\u0645\u0627\u062a
 
-caption.sort=Sort
+caption.sort=\u062a\u0631\u062a\u06cc\u0628 \u062f\u06cc\u06ba
 
-exception.iofile=Error reading file.
-exception.nocompare=Expected comparator for QBF.
-exception.nodataset=Data set not defined.
-exception.nofinishedfile=Sentences file not finished.
-exception.nodelete=No records deleted.
-exception.noinsert=No records created.
-exception.nonegativelimits=Negative limits not allowed.
-exception.noparamtype=Parameter type not allowed.
-exception.noreadfile=Error reading sentences file.
-exception.notnull=The value must be not null.
-exception.noupdate=No records updated.
-exception.noupdatecount=Update count not defined.
-exception.outofbounds=Out of bounds.
-exception.parserconfig=XML analyzer error. Please contact the Administrator.
-exception.xmlfile=Analysis error. Invalid XML file.
 
-label.andby=And by
-label.casesensitive=Case sensitive
-label.findwhat=Find what
-label.imagefiles=Image files
-label.match=Match
-label.sortby=Sort by
-label.where=Where
+exception.iofile=\u0641\u0627\u0626\u0644 \u067e\u0691\u06be\u0646\u06d2 \u0645\u06cc\u06ba \u062e\u0631\u0627\u0628\u06cc
+exception.nocompare=QBF \u06a9\u06d2 \u0644\u06cc\u06d2 \u0645\u062a\u0648\u0642\u0639 \u0645\u0648\u0627\u0632\u0646\u06c1 \u06a9\u0646\u0646\u062f\u06c1
+exception.nodataset=\u0688\u06cc\u0679\u0627 \u0633\u06cc\u0679 \u06a9\u06cc \u0648\u0636\u0627\u062d\u062a \u0646\u06c1\u06cc\u06ba \u06a9\u06cc \u06af\u0626\u06cc \u06c1\u06d2\u06d4
+exception.nofinishedfile=\u062c\u0645\u0644\u0648\u06ba \u06a9\u06cc \u0641\u0627\u0626\u0644 \u062e\u062a\u0645 \u0646\u06c1\u06cc\u06ba \u06c1\u0648\u0626\u06cc\u06d4
+exception.nodelete=\u06a9\u0648\u0626\u06cc \u0631\u06cc\u06a9\u0627\u0631\u0688 \u062d\u0630\u0641 \u0646\u06c1\u06cc\u06ba \u06c1\u0648\u0627\u06d4
+exception.noinsert=\u06a9\u0648\u0626\u06cc \u0631\u06cc\u06a9\u0627\u0631\u0688 \u0646\u06c1\u06cc\u06ba \u0628\u0646\u0627\u06cc\u0627
+exception.nonegativelimits=\u0645\u0646\u0641\u06cc \u062d\u062f\u0648\u062f \u06a9\u06cc \u0627\u062c\u0627\u0632\u062a \u0646\u06c1\u06cc\u06ba \u06c1\u06d2\u06d4
+exception.noparamtype=\u067e\u06cc\u0631\u0627\u0645\u06cc\u0679\u0631 \u06a9\u06cc \u0642\u0633\u0645 \u06a9\u06cc \u0627\u062c\u0627\u0632\u062a \u0646\u06c1\u06cc\u06ba \u06c1\u06d2\u06d4
+exception.noreadfile=\u062c\u0645\u0644\u0648\u06ba \u06a9\u06cc \u0641\u0627\u0626\u0644 \u06a9\u0648 \u067e\u0691\u06be\u0646\u06d2 \u0645\u06cc\u06ba \u062e\u0631\u0627\u0628\u06cc\u06d4
+exception.notnull=\u0642\u062f\u0631 null \u0646\u06c1\u06cc\u06ba \u06c1\u0648\u0646\u06cc \u0686\u0627\u06c1\u06cc\u06d2\u06d4
+exception.noupdate=\u06a9\u0648\u0626\u06cc \u0631\u06cc\u06a9\u0627\u0631\u0688 \u0627\u067e \u0688\u06cc\u0679 \u0646\u06c1\u06cc\u06ba \u06c1\u0648\u0627\u06d4
+exception.noupdatecount=\u0627\u067e \u0688\u06cc\u0679 \u06a9\u06cc \u062a\u0639\u062f\u0627\u062f \u06a9\u06cc \u0648\u0636\u0627\u062d\u062a \u0646\u06c1\u06cc\u06ba \u06a9\u06cc \u06af\u0626\u06cc \u06c1\u06d2\u06d4
+exception.outofbounds=\u062d\u062f \u0633\u06d2 \u0628\u0627\u06c1\u0631.
+exception.parserconfig=XML \u062a\u062c\u0632\u06cc\u06c1 \u06a9\u0627\u0631 \u06a9\u06cc \u062e\u0631\u0627\u0628\u06cc\u06d4 \u0628\u0631\u0627\u06c1 \u06a9\u0631\u0645 \u0627\u06cc\u0688\u0645\u0646\u0633\u0679\u0631\u06cc\u0679\u0631 \u0633\u06d2 \u0631\u0627\u0628\u0637\u06c1 \u06a9\u0631\u06cc\u06ba\u06d4
+exception.xmlfile=\u062a\u062c\u0632\u06cc\u06c1 \u06a9\u06cc \u063a\u0644\u0637\u06cc\u06d4 \u063a\u0644\u0637 XML \u0641\u0627\u0626\u0644\u06d4
 
-list.anypart=Any part of the field
-list.re=Regular expression
-list.startfield=Start field
-list.wholefield=Whole field
+label.andby=\u0627\u0648\u0631 \u06a9\u06cc \u0637\u0631\u0641 \u0633\u06d2
+label.casesensitive=\u062d\u0633\u0627\u0633 \u06a9\u06cc\u0633
+label.findwhat=\u06a9\u06cc\u0627 \u062a\u0644\u0627\u0634 \u06a9\u0631\u06cc\u06ba\u06d4
+label.imagefiles=\u062a\u0635\u0648\u06cc\u0631\u06cc \u0641\u0627\u0626\u0644\u06cc\u06ba\u06d4
+label.match=\u0645\u06cc\u0686
+label.sortby=\u062a\u0631\u062a\u06cc\u0628 \u062f\u06cc\u06ba
+label.where=\u06a9\u06c1\u0627\u06ba
 
-qbf.none=None
-qbf.null=Is null
-qbf.notnull=Is not null
-qbf.equals=Equals
-qbf.distinct=Distinct
-qbf.greater=Greater
-qbf.less=Less
-qbf.greaterequals=Greater or equal
-qbf.lessequals=Less or equals
-qbf.re=Wildcards
+list.anypart=\u0645\u06cc\u062f\u0627\u0646 \u06a9\u0627 \u06a9\u0648\u0626\u06cc \u0628\u06be\u06cc \u062d\u0635\u06c1
+list.re=\u0628\u0627\u0642\u0627\u0639\u062f\u06c1 \u0627\u0638\u06c1\u0627\u0631
+list.startfield=\u0641\u06cc\u0644\u0688 \u0634\u0631\u0648\u0639 \u06a9\u0631\u06cc\u06ba\u06d4
+list.wholefield=\u067e\u0648\u0631\u0627 \u0645\u06cc\u062f\u0627\u0646
 
-message.changeslost=The changes will be lost. Do you want to continue?
-message.nodelete=Cannot mark the record for deleting.
-message.nolistdata=Cannot find in data list.
-message.nomove=Cannot move to other record.
-message.nonew=Cannot create a new record.
-message.norecord=Record not found.
-message.noreload=Cannot reload data list.
-message.nosave=Record not saved.
-message.nosort=The sort condition defined is not valid
-message.resizeimage=The selected image is larger than the accurate size for this field. Do you want to resize the image?
-message.wannasave=Do you want to save the changes before exit?
+qbf.none=\u06a9\u0648\u0626\u06cc \u0646\u06c1\u06cc\u06ba\u06d4
+qbf.null=\u06a9\u0627\u0644\u0639\u062f\u0645 \u06c1\u06d2\u06d4
+qbf.notnull=\u06a9\u0627\u0644\u0639\u062f\u0645 \u0646\u06c1\u06cc\u06ba \u06c1\u06d2\u06d4
+qbf.equals=\u0628\u0631\u0627\u0628\u0631 \u06c1\u06d2\u06d4
+qbf.distinct=\u0627\u0644\u06af
+qbf.greater=\u0639\u0638\u06cc\u0645 \u062a\u0631
+qbf.less=\u06a9\u0645
+qbf.greaterequals=\u0628\u0691\u0627 \u06cc\u0627 \u0628\u0631\u0627\u0628\u0631
+qbf.lessequals=\u06a9\u0645 \u06cc\u0627 \u0628\u0631\u0627\u0628\u0631
+qbf.re=\u0648\u0627\u0626\u0644\u0688 \u06a9\u0627\u0631\u0688\u0632
 
-sgn.caution=Caution\:
-sgn.danger=Danger\: 
-sgn.notice=Notice\: 
-sgn.important=Important\:
-sgn.success=Success\: 
-sgn.unknown=Unknown\: 
-sgn.warning=Warning\:
+message.changeslost=\u062a\u0628\u062f\u06cc\u0644\u06cc\u0627\u06ba \u0636\u0627\u0626\u0639 \u06c1\u0648 \u062c\u0627\u0626\u06cc\u06ba \u06af\u06cc\u06d4 \u06a9\u06cc\u0627 \u0622\u067e \u062c\u0627\u0631\u06cc \u0631\u06a9\u06be\u0646\u0627 \u0686\u0627\u06c1\u062a\u06d2 \u06c1\u06cc\u06ba\u061f
+message.nodelete=\u062d\u0630\u0641 \u06a9\u0631\u0646\u06d2 \u06a9\u06d2 \u0644\u06cc\u06d2 \u0631\u06cc\u06a9\u0627\u0631\u0688 \u06a9\u0648 \u0646\u0634\u0627\u0646 \u0632\u062f \u0646\u06c1\u06cc\u06ba \u06a9\u06cc\u0627 \u062c\u0627 \u0633\u06a9\u062a\u0627\u06d4
+message.nolistdata=\u0688\u06cc\u0679\u0627 \u0644\u0633\u0679 \u0645\u06cc\u06ba \u0646\u06c1\u06cc\u06ba \u0645\u0644 \u0633\u06a9\u062a\u0627\u06d4
+message.nomove=\u062f\u0648\u0633\u0631\u06d2 \u0631\u06cc\u06a9\u0627\u0631\u0688 \u067e\u0631 \u0645\u0646\u062a\u0642\u0644 \u0646\u06c1\u06cc\u06ba \u06c1\u0648 \u0633\u06a9\u062a\u0627\u06d4
+message.nonew=\u0646\u06cc\u0627 \u0631\u06cc\u06a9\u0627\u0631\u0688 \u0646\u06c1\u06cc\u06ba \u0628\u0646\u0627 \u0633\u06a9\u062a\u06d2\u06d4
+message.norecord=\u0631\u06cc\u06a9\u0627\u0631\u0688 \u0646\u06c1\u06cc\u06ba \u0645\u0644\u0627\u06d4
+message.noreload=\u0688\u06cc\u0679\u0627 \u06a9\u06cc \u0641\u06c1\u0631\u0633\u062a \u06a9\u0648 \u062f\u0648\u0628\u0627\u0631\u06c1 \u0644\u0648\u0688 \u0646\u06c1\u06cc\u06ba \u06a9\u06cc\u0627 \u062c\u0627 \u0633\u06a9\u062a\u0627\u06d4
+message.nosave=\u0631\u06cc\u06a9\u0627\u0631\u0688 \u0645\u062d\u0641\u0648\u0638 \u0646\u06c1\u06cc\u06ba \u06c1\u0648\u0627\u06d4
+message.nosort=\u062a\u0631\u062a\u06cc\u0628 \u062f\u06cc \u06af\u0626\u06cc \u0634\u0631\u0637 \u062f\u0631\u0633\u062a \u0646\u06c1\u06cc\u06ba \u06c1\u06d2\u06d4
+message.resizeimage=\u0645\u0646\u062a\u062e\u0628 \u06a9\u0631\u062f\u06c1 \u062a\u0635\u0648\u06cc\u0631 \u0627\u0633 \u0641\u06cc\u0644\u0688 \u06a9\u06d2 \u0644\u06cc\u06d2 \u062f\u0631\u0633\u062a \u0633\u0627\u0626\u0632 \u0633\u06d2 \u0628\u0691\u06cc \u06c1\u06d2\u06d4 \u06a9\u06cc\u0627 \u0622\u067e \u062a\u0635\u0648\u06cc\u0631 \u06a9\u0627 \u0633\u0627\u0626\u0632 \u062a\u0628\u062f\u06cc\u0644 \u06a9\u0631\u0646\u0627 \u0686\u0627\u06c1\u062a\u06d2 \u06c1\u06cc\u06ba\u061f
+message.wannasave=\u06a9\u06cc\u0627 \u0622\u067e \u0628\u0627\u06c1\u0631 \u0646\u06a9\u0644\u0646\u06d2 \u0633\u06d2 \u067e\u06c1\u0644\u06d2 \u062a\u0628\u062f\u06cc\u0644\u06cc\u0627\u06ba \u0645\u062d\u0641\u0648\u0638 \u06a9\u0631\u0646\u0627 \u0686\u0627\u06c1\u062a\u06d2 \u06c1\u06cc\u06ba\u061f
 
-title.editor=Editor message
-title.find=Find
-title.message=Database manager message
+sgn.caution=\u0627\u062d\u062a\u06cc\u0627\u0637\:
+sgn.danger=\u062e\u0637\u0631\u06c1\:
+sgn.notice=\u0646\u0648\u0679\u0633\:
+sgn.important=\u0627\u06c1\u0645\:
+sgn.success=\u06a9\u0627\u0645\u06cc\u0627\u0628\u06cc\: 
+sgn.unknown=\u0646\u0627\u0645\u0639\u0644\u0648\u0645\:
+sgn.warning=\u0648\u0627\u0631\u0646\u0646\u06af\:
+
+title.editor=\u0627\u06cc\u0688\u06cc\u0679\u0631 \u06a9\u0627 \u067e\u06cc\u063a\u0627\u0645
+title.find=\u0645\u0644
+title.message=\u0688\u06cc\u0679\u0627 \u0628\u06cc\u0633 \u0645\u06cc\u0646\u06cc\u062c\u0631 \u06a9\u0627 \u067e\u06cc\u063a\u0627\u0645
