--- a/die-modules/languageTranslator/pom.xml
+++ b/die-modules/languageTranslator/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.4</version>
+		<version>2.7.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.die</groupId>
-	<artifactId>Accounting</artifactId>
+	<artifactId>LanguageTranslator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Accounting</name>
-	<description>DIE Accounting Component</description>
+	<name>LanguageTranslator</name>
+	<description>DIE Language Translation Component</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
